<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/settings">
		<EditTextPreference
			android:key="port"
			android:defaultValue="8080"
			android:title="@string/port" />
		<EditTextPreference
			android:key="root"
			android:defaultValue="/sdcard/htdocs"
			android:title="@string/root" />
		<EditTextPreference
			android:key="index"
			android:defaultValue="index.html"
			android:title="@string/index" />
		<EditTextPreference
			android:key="footer"
			android:defaultValue="footer"
			android:title="@string/footer" />
		<CheckBoxPreference
			android:key="dir_list"
			android:defaultValue="false"
			android:title="@string/dir_list" />
		<CheckBoxPreference
			android:key="wake_lock"
			android:defaultValue="false"
			android:title="@string/wake_lock" />
		<CheckBoxPreference
			android:key="wifi_lock"
			android:defaultValue="false"
			android:title="@string/wifi_lock" />
		<CheckBoxPreference
			android:key="cors"
			android:defaultValue="false"
			android:title="@string/cors" />
</PreferenceScreen>
